fixed letter spacing

--- a/src/index.css
+++ b/src/index.css
@@ -60,7 +60,7 @@
   a,
   button {
     font-size: 20px;
-    letter-spacing: 1.5px;
+    letter-spacing: 1px;
     line-height: 35px;
   }
 
